--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
  <!-- //////////////////////// hero section start here////////////////// -->
 <div data-aos="fade-up">
 
-  <section class="hero mx-lg-5 d-flex justify-content-between align-center">
+  <section class="hero vertical-padding d-flex flex-column flex-lg-row align-items-center justify-content-center my-5">
     <div class="about">
       <h1>Hello, I am <br> <span class="bg-main">Mubashir Qureshi</span></h1>
       <p>I'm Freelancer UI/Ux Designer and Developer Based in Hyderabad,karachi.I strives to build immersive and beautiful web applications through carefully carfted code and user centric-desin.</p>
@@ -78,8 +78,8 @@
       </div>
     </div>
     </div>
-    <div class="image ms-lg-5">
-      <img src="image/profile-photo.jpg" alt=""  class="img-fluid w-lg-100 w-md-75 w-lg-50 h-auto ms-3">
+    <div class="image px-3">
+      <img src="image/profile-photo.jpg" alt=""  class="img-fluid w-100 w-md-75 w-auto h-lg-auto mx-5 rounded shadow" >
   </div>
   </section>
 </div>
