--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
       </div>
     </div>
     </div>
-    <div class="image px-3">
-      <img src="image/profile-photo.jpg" alt=""  class="img-fluid w-100 w-md-75 w-auto h-lg-auto mx-5 rounded shadow" >
+    <div class="image">
+      <img src="image/profile-photo.jpg" alt=""  class="img-fluid w-100 w-md-75 w-auto h-lg-auto rounded shadow" >
   </div>
   </section>
 </div>
